  * Add hardening-check script.
  * debuild:
    + Add "--" in --help output for debian/rules mode.
  * test_package_lifecycle:
    + Fix expected output when run as root.
  * build-rdeps:
    + Use apt interfaces to find and read the sources files, fixing --old
      (non-dose) behavior when sources files are compressed.  (Closes:
      #698240)
    + Check Build-Depends-Arch for dependencies.

  [ Daniel Shahaf ]
  * bts:
    + Add devscripts.conf(5) to "See also".  Closes: #869842

  [ Osamu Aoki ]
  * uscan:
    + Fix the new package version regex for filenamemangle.  Closes: #869150
    + Fix example URL for pagemangle.  Closes: #864914
    + Set $origcount to 0 for each watch file. Closes: #840232
    + Don't fail on pgpmode=auto. Closes: #852537
    + Don't fail on pgpmode=previous. Closes: #840943, #873289
    + Rename and convert the detached signature with updated mk-origtargz.
      Closes: #727096
  * mk-origtargz 
    + Rename and convert the detached signature. Closes: #832267, #837173,
      #870281
  * uupdate 
    + -b option is not "New upstream release". Closes: #842468, #845610

 -- Mattia Rizzolo <mattia@debian.org>  Tue, 25 Jul 2017 14:18:24 +0200

devscripts (2.17.9) unstable; urgency=medium

  [ Adam D. Barratt ]
  * transition-check:
    + fix URL of source data.  Closes: #868072

  [ Mattia Rizzolo ]
  * debrepro:
    + support skipping the 'time' variation.
  * debchange:
    + Fix test failure when building in Ubuntu.

  [ Ximin Luo ]
  * debdiff-apply:
    + Actually install the script, by adding it to setup.py.  Closes: #868260

  [ gregor herrmann ]
  * uscan:
    + Ensure uscan doesn't try to contact local proxies in tests.

 -- James McCoy <jamessan@debian.org>  Wed, 19 Jul 2017 20:29:27 -0400

devscripts (2.17.8) unstable; urgency=medium

  [ Ximin Luo ]
  * Rename debpatch to debdiff-apply. (Closes: #867738, #867743)

 -- James McCoy <jamessan@debian.org>  Mon, 10 Jul 2017 23:36:09 -0400
