@@ -36,6 +36,11 @@ devscripts (2.17.10) UNRELEASED; urgency=medium
       (non-dose) behavior when sources files are compressed.  (Closes:
       #698240)
     + Check Build-Depends-Arch for dependencies.
+  * debcheckout:
+    + Using --auth for git repositories now performs the clone with the
+      Vcs-Git URL, but sets remote.<name>.pushurl to the rewritten
+      authenticated URL.  Thanks to Andreas Henriksson for the patch!
+      (Closes: #753838)
 
   [ Daniel Shahaf ]
   * bts:
